--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,5 @@
 name: Deploy Todo App
+concurrency: deploy-todo-app
 
 on:
   push:
@@ -14,9 +15,21 @@ env:
     AZURE_RESOURCE_GROUP_NAME: TodoApp
     ENVIRONMENT: dev
 
+# https://learn.microsoft.com/en-us/training/modules/test-bicep-code-using-github-actions/3-lint-validate-bicep-code?pivots=powershell
+
 jobs:
-  deploy:
-    name: Deploy
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Lint
+      run: |
+        az bicep build --file deploy/main.bicep    
+
+  validate:
+    name: Validate
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -27,10 +40,29 @@ jobs:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-    - name: Validate Bicep
-      run: |
-        az bicep build --file deploy/main.bicep
-    - name: Deploy Bicep
+    - name: Preflight validation
+      uses: azure/arm-deploy@v1
+      with:
+        deploymentName: ${{ github.run_number }}
+        scope: resourcegroup
+        resourceGroupName: ${{ env.AZURE_RESOURCE_GROUP_NAME }}
+        template: ./infrastructure/main.bicep
+        deploymentMode: Validate #  preflight validation
+
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    needs: [lint, validate]
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Azure Login
+      uses: azure/login@v1
+      with:
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+    - name: Deploy
       uses: azure/arm-deploy@v1
       with:
         deploymentName: ${{ github.run_number }}
@@ -38,3 +70,4 @@ jobs:
         resourceGroupName: ${{ env.AZURE_RESOURCE_GROUP_NAME }}
         template: ./infrastructure/main.bicep
         parameters: environmentType=${{ env.ENVIRONMENT }}
+        failOnStdErr: false
