--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,7 +26,7 @@ jobs:
       uses: actions/checkout@v3
     - name: Lint
       run: |
-        az bicep build --file deploy/main.bicep    
+        az bicep build --file infrastructure/main.bicep    
 
   validate:
     name: Validate
@@ -47,6 +47,7 @@ jobs:
         scope: resourcegroup
         resourceGroupName: ${{ env.AZURE_RESOURCE_GROUP_NAME }}
         template: ./infrastructure/main.bicep
+        parameters: environmentType=${{ env.ENVIRONMENT }}
         deploymentMode: Validate #  preflight validation
 
   deploy:
