--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -87,7 +87,7 @@ jobs:
           resourceGroupName: ${{ inputs.resourceGroupName }}
           template: ./infra/main.bicep
           parameters: >
-            environmentType=${{ inputs.environment }}
+            environment=${{ inputs.environment }}
             reviewApiUrl=${{ inputs.reviewApiUrl }}
             reviewApiKey=${{ secrets.reviewApiKey }}
           failOnStdErr: false
