--- a/src/TodoApp/appsettings.json
+++ b/src/TodoApp/appsettings.json
@@ -1,5 +1,5 @@
 {
-/*
+  /*
 The following identity settings need to be configured
 before the project can be successfully executed.
 For more info see https://aka.ms/dotnet-template-ms-identity-platform
@@ -8,12 +8,10 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
     "Instance": "https://login.microsoftonline.com/",
     "Domain": "qualified.domain.name",
     "TenantId": "1d063515-6cad-4195-9486-ea65df456faa",
-    "ClientId": "aa5ab784-61f9-482e-a5f9-7262b811f1ba",
-
+    "ClientId": "cf2b7db1-87aa-4fe1-90c8-219abd6f1609",
     "ClientSecret": "secret-from-app-registration",
-    "ClientCertificates" : [
-    ],
-    "Scopes": "api://aa5ab784-61f9-482e-a5f9-7262b811f1ba/user_impersonation",
+    "ClientCertificates": [],
+    "Scopes": "api://cf2b7db1-87aa-4fe1-90c8-219abd6f1609/user_impersonation",
     "CallbackPath": "/signin-oidc"
   },
   "DownstreamApi": {
