--- a/src/TodoApp/appsettings.json
+++ b/src/TodoApp/appsettings.json
@@ -11,7 +11,7 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
     "ClientId": "cf2b7db1-87aa-4fe1-90c8-219abd6f1609",
     "ClientSecret": "secret-from-app-registration",
     "ClientCertificates": [],
-    "Scopes": "api://cf2b7db1-87aa-4fe1-90c8-219abd6f1609/user_impersonation",
+    "Scopes": "user_impersonation",
     "CallbackPath": "/signin-oidc"
   },
   "DownstreamApi": {
