--- a/src/TodoApp/appsettings.json
+++ b/src/TodoApp/appsettings.json
@@ -4,6 +4,7 @@
     "Domain": "qualified.domain.name",
     "TenantId": "1d063515-6cad-4195-9486-ea65df456faa",
     "ClientId": "cf2b7db1-87aa-4fe1-90c8-219abd6f1609",
+    "ClientSecret": "secret-from-app-registration",
     "Scopes": "user_impersonation",
     "CallbackPath": "/signin-oidc"
   },
