fix: invalid secrets

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,7 +77,7 @@ jobs:
           deploymentMode: Complete
           failOnStdErr: false
       - name: Website URL
-        run: 'echo "Website URL 🚀: https://${{ steps.deploy.outputs.appServiceAppHostName }}" >> $GITHUB_STEP_SUMMARY'
+        run: 'echo "Website URL 🚀: https://${{ steps.deploy.outputs.appServiceAppHostName }}" >> "${GITHUB_STEP_SUMMARY}"'
     needs: [validate]
 
   deploy-application:
