--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -64,7 +64,7 @@ jobs:
           deploymentMode: Complete
           failOnStdErr: false
       - name: Website URL
-        run: 'echo "Website URL 🚀: https://${{ steps.deploy.outputs.appServiceAppHostName }}" >> $GITHUB_STEP_SUMMARY'
+        run: 'echo "Website URL 🚀: https://${{ steps.deploy.outputs.appServiceAppHostName }}" >> "${GITHUB_STEP_SUMMARY}"'
 
 
   deploy-application:
