--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -66,11 +66,14 @@ jobs:
       - name: Website URL
         run: 'echo "Website URL 🚀: https://${{ steps.deploy.outputs.appServiceAppHostName }}" >> "${GITHUB_STEP_SUMMARY}"'
 
-
   deploy-application:
     name: Deploy application
     uses: ./.github/workflows/deploy-app.yml
     with:
       environment: test
       appServiceAppName: ${{ needs.deploy.outputs.appServiceAppName }}
+    secrets:
+        AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+        AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+        AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
     needs: [deploy]
