--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,13 @@ permissions:
 # https://learn.microsoft.com/en-us/training/modules/manage-end-end-deployment-scenarios-using-bicep-github-actions/3-configure-applications-virtual-machines
 
 jobs:
-  build:
-    name: Build
-    uses: ./.github/workflows/build.yml
-
   lint:
     name: Lint
     uses: ./.github/workflows/lint.yml
+
+  build:
+    name: Build
+    uses: ./.github/workflows/build.yml
 
   deploy-test:
     name: Deploy [test]
@@ -36,7 +36,7 @@ jobs:
         AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
         AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
         AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-    needs: [build, lint]
+    needs: [lint, build]
 
   deploy-production:
     name: Deploy [production]
