--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   workflow_call:
 
 jobs:
-  build-application:
+  build-app:
     name: Build application
     runs-on: ubuntu-latest
     steps:
