--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,16 +18,16 @@ permissions:
 # https://learn.microsoft.com/en-us/training/modules/manage-end-end-deployment-scenarios-using-bicep-github-actions/3-configure-applications-virtual-machines
 
 jobs:
-  lint:
-    name: Lint
+  lint-infra:
+    name: Lint infrastructure
     uses: ./.github/workflows/lint.yml
 
-  build:
-    name: Build
+  build-app:
+    name: Build application
     uses: ./.github/workflows/build.yml
 
-  deploy-test:
-    name: Deploy [test]
+  deploy-infra-test:
+    name: Deploy infrastructure [test]
     uses: ./.github/workflows/deploy.yml
     with:
       environment: test
@@ -36,10 +36,10 @@ jobs:
         AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
         AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
         AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-    needs: [lint, build]
+    needs: [lint-infra, build-app]
 
-  deploy-production:
-    name: Deploy [production]
+  deploy-infra-prod:
+    name: Deploy infrastructure [prod]
     uses: ./.github/workflows/deploy.yml
     with:
       environment: production
@@ -48,4 +48,4 @@ jobs:
         AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
         AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
         AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-    needs: [deploy-test]
+    needs: [deploy-infra-test]
