--- a/.github/workflows/pr-closed.yml
+++ b/.github/workflows/pr-closed.yml
@@ -18,18 +18,18 @@ env:
   resourceGroupName: pr_${{ github.event.number }}
 
 jobs:
-  remove:
-    name: Remove PR resources
+  delete-infra:
+    name: Delete infrastructure
     runs-on: ubuntu-latest
     steps:
-      - name: Azure Login
+      - name: Login to Azure
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-      - uses: azure/cli@v2
-        name: Delete resource group
+      - name: Delete infrastructure
+        uses: azure/cli@v2
         with:
           inlineScript: |
             az group delete \
