--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,6 +10,6 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-    - name: Lint
+    - name: Lint infrastructure
       run: |
         az bicep build --file infra/main.bicep
