--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 
-name: Deploy Todo App (E2E)
+name: Deploy (E2E)
 
 concurrency:
   group: todo-all-deploy
@@ -18,16 +18,16 @@ permissions:
 # https://learn.microsoft.com/en-us/training/modules/manage-end-end-deployment-scenarios-using-bicep-github-actions/3-configure-applications-virtual-machines
 
 jobs:
-  lint-infra:
-    name: Lint infrastructure
+  lint:
+    name: Lint
     uses: ./.github/workflows/lint.yml
 
-  build-app:
-    name: Build application
+  build:
+    name: Build
     uses: ./.github/workflows/build.yml
 
-  deploy-infra-test:
-    name: Deploy infrastructure [test]
+  deploy-test:
+    name: Deploy [test]
     uses: ./.github/workflows/deploy.yml
     with:
       environment: test
@@ -36,10 +36,10 @@ jobs:
         AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
         AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
         AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-    needs: [lint-infra, build-app]
+    needs: [lint, build]
 
-  deploy-infra-prod:
-    name: Deploy infrastructure [prod]
+  deploy-prod:
+    name: Deploy [prod]
     uses: ./.github/workflows/deploy.yml
     with:
       environment: production
@@ -48,4 +48,4 @@ jobs:
         AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
         AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
         AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-    needs: [deploy-infra-test]
+    needs: [deploy-test]
